# larje-eww-ui

./: CMakeLists.txt  install.py
include/: larje_utils.hpp
include/eww_ui/: Box.h  EwwProperties.h  EwwUIObject.h  EwwUIObjectContainer.h  Label.h
larjeuictl/: CMakeLists.txt  Window.cpp  Window.h  WindowController.cpp  WindowController.h  initializer.cpp  initializer.h  main.cpp  window.cpp  window.h
larjeuid/: CMakeLists.txt  Window.cpp  Window.h  WindowController.cpp
layouts/: CMakeLists.txt
layouts/layout-default/: CMakeLists.txt  main.cpp
src/eww_ui/: Box.cpp  CMakeLists.txt  EwwProperties.cpp  EwwUIObject.cpp  EwwUIObjectContainer.cpp  Label.cpp
styles/: _theme.scss  main.scss
styles/components/: _card-default.scss  _label-default.scss
styles/palettes/: _volumen-bubble-gum.scss  _volumen-clean-dark.scss  _volumen-clean-light.scss
widgets/: CMakeLists.txt
widgets/widget-battery/: CMakeLists.txt  main.cpp
widgets/widget-clock/: CMakeLists.txt  main.cpp
widgets/widget_clock/: CMakeLists.txt  main.cpp
window-templates/: tile-panel.json
